--- a/customization3.html
+++ b/customization3.html
@@ -144,10 +144,11 @@ footer {
     </div>
   </div>
 </section>
-<!-- Footer -->
-<!-- <footer class="bg-dark text-white text-center py-3">
+
+<!-- footer -->
+ <footer class="bg-dark text-white text-center py-3">
   <p class="mb-0">&copy; 2025 Transflower Store. All rights reserved.</p>
-</footer> -->
+
 
 <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
