--- a/layoutsystem8.html
+++ b/layoutsystem8.html
@@ -129,6 +129,20 @@
   </div>
 </section>
 
+<!-- combine grid and flexbox for hero section -->
+  <section class="container my-5">
+  <div class="row align-items-center">
+    <div class="col-md-6 text-center text-md-start">
+      <h1>Fresh Flowers Delivered Daily 🌹</h1>
+      <p class="lead">Order online and make every day bloom beautifully.</p>
+      <button class="btn btn-danger btn-lg mt-3">Shop Now</button>
+    </div>
+    <div class="col-md-6 text-center">
+      <img src="/Website5/images/hero5.webp" class="img-fluid rounded-4 shadow" alt="Hero Image">
+    </div>
+  </div>
+</section>
+
   <!-- Product Section -->
   <main>
   <section class="py-5">
